--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>Finn and the Enchanted Chamber</title>
+    <style>
+     html, body {
+         margin: 0;
+         padding: 0;
+     }
+    </style>
     <script type="text/javascript" src="js/compiled/dev.js"></script>
   </head>
 
