--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -10,6 +10,9 @@
      }
     </style>
     <script type="text/javascript" src="js/compiled/dev.js"></script>
+    <script type="text/javascript">
+      finn_chamber.core.start_BANG_();
+    </script>
   </head>
 
   <body>
