--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -9,9 +9,9 @@
          padding: 0;
      }
     </style>
-    <script type="text/javascript" src="js/compiled/dev.js"></script>
+    <script type="text/javascript" src="js/compiled/main.js"></script>
     <script type="text/javascript">
-      finn_chamber.core.start_BANG_();
+     //finn_chamber.core.start_BANG_();
     </script>
   </head>
 
